--- a/BankingApp/Views/Cards/Index.cshtml
+++ b/BankingApp/Views/Cards/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<head>
+<div>
     <meta charset="UTF-8">
     <title>Card Boxes Example</title>
     <!-- Bootstrap CSS -->
@@ -17,10 +17,6 @@
             justify-content: center;
             align-items: center;
         }
-        /* Set background color and font family */
-        body {
-            font-family: 'Open Sans', sans-serif;
-        }
 
         /* Style for card-box */
         .card-box {
@@ -30,7 +26,8 @@
             padding: 20px;
             margin-top: 20px;
             margin-bottom: 60px;
-            background-color: #577590;
+            /*background-color: #AED6FA;*/
+            background-image: linear-gradient(to bottom right, #0B5ED7, #D315B7);
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
             position: relative;
         }
@@ -54,6 +51,7 @@
         .card-title {
             font-size: 24px;
             font-weight: bold;
+            color: #ffffff;
             margin-top: 5px;
             margin-bottom: 20px;
         }
@@ -61,7 +59,7 @@
         /* Style for card content */
         .card-heading-text {
             font-size: 12px;
-            color: #000000;
+            color: #ffffff;
             margin-top: 16px;
             margin-bottom: 2px;
         }
@@ -69,7 +67,7 @@
         /* Style for card content */
         .card-text {
             font-size: 16px;
-            color: #000000;
+            color: #f0f0f0;
             margin-top: 2px;
             margin-bottom: 16px;
         }
@@ -79,12 +77,14 @@
             width: 60px;
             height: 60px;
             border-radius: 50%;
-            border: 2px solid #007bff;
+            border: 2px solid #0d6efd;
             font-size: 12px;
             font-weight: bold;
-            color: #000000;
-            background-color: #007bff;
+            color: #ffffff;
+            background-color: #0d6efd;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+            text-align: center;
+            padding: 10px 0;
             
             position: absolute;
             left: 430px;
@@ -95,12 +95,14 @@
             width: 60px;
             height: 60px;
             border-radius: 50%;
-            border: 2px solid #007bff;
+            border: 2px solid #0d6efd;
             font-size: 12px;
             font-weight: bold;
-            color: #000000;
-            background-color: #007bff;
+            color: #ffffff;
+            background-color: #0d6efd;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+            text-align: center;
+            padding: 16px 0;
 
             position: absolute;
             left: 430px;
@@ -111,12 +113,14 @@
             width: 60px;
             height: 60px;
             border-radius: 50%;
-            border: 2px solid #007bff;
+            border: 2px solid #0d6efd;
             font-size: 12px;
             font-weight: bold;
-            color: #000000;
-            background-color: #007bff;
+            color: #ffffff;
+            background-color: #0d6efd;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+            text-align: center;
+            padding: 8px 0;
 
             position: absolute;
             left: 430px;
@@ -124,33 +128,34 @@
         }
 
         .circle-button1:hover {
-            background-color: #647C90;
-            border: 2px solid #647C90;
-            color: #ffffff;
+            background-color: #ffffff;
+            border: 2px solid #0B5ED7;
         }
 
         .circle-button2:hover {
-            background-color: #647C90;
-            border: 2px solid #647C90;
-            color: #ffffff;
+            background-color: #ffffff;
+            border: 2px solid #0B5ED7;
         }
 
         .circle-button3:hover {
-            background-color: #647C90;
-            border: 2px solid #647C90;
-            color: #ffffff;
+            background-color: #ffffff;
+            border: 2px solid #0B5ED7;
         }
 
 
     </style>
-</head>
+</div>
 
+<div>
+    <div class="text-center">
+        <h1 style="color: #026efd;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-credit-card-2-back-fill" viewBox="0 0 16 16">
+                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5H0V4zm11.5 1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-2zM0 11v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1H0z" />
+            </svg> My Cards
+        </h1>
+    </div>
+    <hr />
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-
-<body>
     <div class="container">
             @foreach (var item in Model)
             {
@@ -163,7 +168,8 @@
                     <div class="card-exp-cvv-box">
                         <div class="expiry">
                             <p class="card-heading-text">Expiry date</p>
-                                <p class="card-text">@Html.DisplayFor(modelItem => item.ExpirationDate)</p>
+                        <p class="card-text">@Html.Raw(item.ExpirationDate.ToString("MM\\/yy"))</p>
+                        @*<p class="card-text">@item.ExpirationDate.ToString("MM\\/yy")</p>*@
                         </div>
                         <div class="cvv">
                             <p class="card-heading-text">CVV</p>
@@ -171,14 +177,21 @@
                         </div>
                     </div>
 
-                      @*  <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+                <a class="circle-button1" asp-action="Edit" asp-route-id="@item.Id">Block<br>Card</a>
+                <a class="circle-button2" asp-action="Details" asp-route-id="@item.Id">Set limit</a>
+                <a class="circle-button3" asp-controller="Transactions" asp-action="Index" >Trans<br>actions</a>
+
+                @*<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
                 </div>
             }
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js" integrity="sha512-nJscfM5IvZ8BW6w5U5c1rhkWP9Ro3z8CzeWAnYJcP+bKr0QOhZbR+OwOroju1+rDZLzv9sgKj8nA45I2NgUPFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</body>
+
+    <p class="btn btn-primary">
+        <a asp-action="Create" class="text-white">Create New Card</a>
+    </p>
+
+    @*<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js" integrity="sha512-nJscfM5IvZ8BW6w5U5c1rhkWP9Ro3z8CzeWAnYJcP+bKr0QOhZbR+OwOroju1+rDZLzv9sgKj8nA45I2NgUPFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>*@
+</div>
 
 
 
